# mpl2typ

./: LICENSE  README.md  pyproject.toml  style.typ
examples/: plot.ipynb
examples/plot-bar-horizontal/: figure.typ
examples/plot-error-limits/: figure.typ
examples/plot-error-limits/data/: axes-0.json
examples/plot-errorbar/: figure.typ
examples/plot-errorbar/data/: axes-0.json
examples/plot-fill-between/: figure.typ
examples/plot-fill-between/data/: axes-0.json  axes-1.json  axes-2.json
examples/plot-gridspec/: figure.typ
examples/plot-gridspec/data/: axes-0.json  axes-1.json  axes-2.json  axes-3.json
examples/plot-inset/: figure.typ
examples/plot-inset/data/: axes-0.json  inset-0.json
examples/plot-legend/: figure.typ
examples/plot-legend/data/: axes-0.json
examples/plot-line-collection/: figure.typ
examples/plot-line-collection/data/: axes-0.json
examples/plot-multiple-gridspecs/: figure.typ
examples/plot-multiple-gridspecs/data/: axes-0.json  axes-1.json  axes-2.json  axes-3.json  axes-7.json  axes-8.json
examples/plot-path-collection/: figure.typ
examples/plot-pcolormesh/: figure.typ
examples/plot-scatter/: figure.typ
examples/plot-simple/: figure.typ
examples/plot-span/: figure.typ
examples/plot-standalone/: figure.typ
examples/plot-stem/: figure.typ
examples/plot-step/: figure.typ
examples/plot-ticks/: figure.typ
examples/plot-title/: figure.typ
src/mpl2typ/: __init__.py  axes.py  collections.py  figure.py  grid.py  legend.py  line.py  lines.py  mpl2.typ  patches.py  text.py  typst.py  util.py
(+20 files in other folders)
