[build-system]
requires = ["setuptools >= 78.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl2typ"
version = "0.1.0"
description = "Export Matplotlib figures to structured Typst files"
readme = "README.md"
authors = [{ name = "Janek Fleper", email = "j.fleper@mailbox.org" }]
requires-python = ">=3.10"
dependencies = ["imageio>=2.37.2", "matplotlib>=3.10.1", "pypst"]

[tool.uv.sources]
pypst = { git = "https://github.com/janekfleper/pypst.git", rev = "mpl2typ" }
